@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-42
+2015-05-18 Mikhail S. Dubrovin	
+- GenericCalibPars.cpp - improve memory management is destructor (PSAS-148)
+	
 Tag: V00-02-41
 2015-05-12 Mikhail S. Dubrovin	
 - GeometryObject.cpp - fix memory management in method evaluate_pixel_coords() (PSAS-147)
